# janus

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  db.py  main.py  models.py  schemas.py  service.py
static/: style.css
templates/: index.html
tests/: test_auth.py
